Fixed bad bug with korean where didn't encode the response in utf8, got abort recording working